--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ beautifulsoup4==4.6.0
 certifi==2017.7.27.1
 chardet==3.0.4
 colorama==0.3.9
+cssselect==1.0.1
 discord.py==0.16.12
 get==0.0.21
 googletrans==2.2.0
@@ -16,8 +17,10 @@ lxml==4.1.0
 mccabe==0.6.1
 multidict==3.2.0
 post==0.0.13
+psycopg2==2.7.3.1
 public==0.0.38
 pylint==1.7.4
+pyquery==1.2.17
 query-string==0.0.12
 request==0.0.13
 requests==2.18.4
